# MyTcpServer

./: README.md
server/: CMakeLists.txt
server/client/: client.cpp
server/inc/: MyBaseClient.h  MyBaseServer.h  MyMessageType.h  MyTimestamp.h
server/server/: server.cpp
